# chunked-read-write

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json  install-deps.sh
src/: main.rs
src/io/: http.rs
tests/: http_client.rs
