[package]
name = "chunked-read-write"
version = "0.0.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["web"] }
web-sys = { version = "0.3", features = [
  "Request",
  "RequestInit", 
  "RequestMode",
  "Response",
  "Headers",
  "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-streams = "0.4"
futures = "0.3.31"

[dev-dependencies]
wasm-bindgen-test = "0.3.53"
